Fix on margins for project page on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1370,7 +1370,7 @@ a {
 @media screen and (max-width: 670px) {
   /* Adjustments on top nav */
   .main-header {
-    padding: 13px 22px;
+    padding: 13px 30px;
     border-width: 5px;
     flex-wrap: wrap;
   }
@@ -1437,7 +1437,7 @@ a {
 
   /* Footer */
   .footer-cta-container {
-    padding: 20px;
+    padding: 30px;
   }
 
   /* About page */
@@ -1468,6 +1468,11 @@ a {
   .project-hero {
     min-height: calc(100vh - 86px);
     height: auto;
+  }
+
+  .hero-area,
+  .project-hero {
+    padding: 30px;
   }
 
   .hero-title {
@@ -1578,17 +1583,24 @@ a {
   }
 
   .table-title {
-    max-width: 100% !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 
   .section-tables li {
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 90%;
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+
+  .section-tables li hr {
+    max-width: 240px;
+    margin-left: 0;
   }
 
   .table-items li {
     max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   /* Take aways */
@@ -1649,8 +1661,6 @@ a {
   }
 
   .persona .text-container {
-    max-width: 90%;
-    margin: auto;
     margin-top: 30px;
   }
 
@@ -1703,9 +1713,8 @@ a {
 
   .section-subtitle,
   .project-text {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 90%;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   /* Wireframes */
@@ -1786,6 +1795,13 @@ a {
 
   .comparison {
     margin-bottom: 25px;
+  }
+
+  /* Contact */
+  .contact-form {
+    max-width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
